--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -28,33 +28,60 @@
                         <p:commandLink value="#{post.title}"
                                        action="#{postView.setSelectedPost(post)}"
                                        oncomplete="PF('viewPostDialog').show(); return false;"/>
-
                     </p:outputPanel>
                 </p:dataList>
             </p:panel>
+        </h:form>
 
-            <p:dialog id="viewPostDialog" widgetVar="viewPostDialog" header="DETALLES DEL POST" modal="true" closable="true">
-                <h:panelGrid columns="2">
+        <h:form>
+            <p:dialog id="viewPostDialog" widgetVar="viewPostDialog" header="DETALLES DEL POST" modal="true" closable="true" width="800" height="600">
+                <h:panelGrid columns="2" style="width: 100%; height: 100%; text-align: center;">
 
-                    <h:outputLabel value="Título:" />
-                    <h:outputText value="#{postView.selectedPost.title}" />
-                    <h:outputLabel value="Autor:" />
-                    <h:outputText value="#{postView.selectedPost.autor}" />
-                    <h:outputLabel value="Contenido:" />
-                    <h:outputText value="#{postView.selectedPost.content}" />
+                    <h:panelGrid columns="1" style="padding-right: 20px; text-align: left;">
+                        <h:outputLabel value="Título:" />
+                        <h:outputText value="#{postView.selectedPost.title}" />
+
+                        <h:outputLabel value="Autor:" />
+                        <h:outputText value="#{postView.selectedPost.autor}" />
+
+                        <h:outputLabel value="Contenido:" />
+                        <h:outputText value="#{postView.selectedPost.content}" />
+                    </h:panelGrid>
+
+                    <h:panelGrid columns="1" style="border-left: 2px solid #ccc; padding-left: 20px; text-align: left;">
+                        <h:outputLabel value="Comentarios:" />
+
+                        <p:dataList value="#{commentsView.comments}" var="comment" style="text-align: left; margin-bottom: 10px;">
+                            <h:outputText value="#{comment.autor}: #{comment.content}" style="display: block;" />
+                        </p:dataList>
+
+                        <h:outputLabel value="No se encontraron registros." rendered="#{empty commentsView.comments}" />
+
+                        <h:outputLabel value="Nuevo Comentario:" />
+                        <h:outputLabel value="Autor:" />
+                        <p:inputText id="autor" value="#{addCommentsView.commentsDTO.autor}" />
+
+                        <h:outputLabel value="Contenido:" />
+                        <p:inputTextarea id="content" value="#{addCommentsView.commentsDTO.content}" />
+
+                        <h:outputLabel value="Likes:" />
+                        <p:inputText id="likes" value="#{addCommentsView.commentsDTO.likes}" />
+
+                        <h:outputLabel value="Post ID:" />
+                        <p:inputText id="post_id" value="#{addCommentsView.commentsDTO.postId}" />
+
+                        <p:commandButton value="Guardar" action="#{addCommentsView.newComment()}" oncomplete="location.reload();" />
+                    </h:panelGrid>
 
                 </h:panelGrid>
-                <p:commandButton value="Cerrar" onclick="PF('viewPostDialog').hide();" type="button" />
-
             </p:dialog>
+        </h:form>
 
-
-
+        <h:form>
             <p:commandButton value="Crear Publicación" icon="pi pi-pen-to-square"
                              styleClass="ui-button-raised"
                              onclick="PF('createPostDialog').show(); return false;"
                              style="position: absolute; bottom: 20px; right: 20px;" />
-
 
             <p:dialog header="Crear Publicación" widgetVar="createPostDialog" modal="true">
                 <h:panelGrid columns="2">
@@ -67,20 +94,20 @@
                     <h:outputLabel for="content" value="Contenido:" />
                     <p:inputTextarea id="content" value="#{postCreateView.postsDTO.content}" required="true" />
 
-                    <p:commandButton value="Guardar" action="#{postCreateView.createPost()}"/>
+                    <p:commandButton value="Guardar" action="#{postCreateView.createPost()}" oncomplete="location.reload();"/>
 
                     <p:commandButton value="Cancelar" onclick="PF('createPostDialog').hide();" type="button" />
-                                    </h:panelGrid>
-                                </p:dialog>
+                </h:panelGrid>
+            </p:dialog>
+        </h:form>
 
-                            </h:form>
-                        </div>
+    </div>
 
-                        <div class="footer">
-                            <p>
-                                &copy; 2024 PostAndComments&nbsp; &nbsp;Programación 2&nbsp; &nbsp;Universidad
-                                El Bosque
-                            </p>
-                        </div>
-                    </h:body>
-                    </html>
+    <div class="footer">
+        <p>
+            &copy; 2024 PostAndComments&nbsp; &nbsp;Programación 2&nbsp; &nbsp;Universidad
+            El Bosque
+        </p>
+    </div>
+</h:body>
+</html>
